--- a/lrapp-bsm-client/app/system/dept/deptForm.html
+++ b/lrapp-bsm-client/app/system/dept/deptForm.html
@@ -1,10 +1,27 @@
 <form class="form-horizontal" name="appForm" verify-scope="tipStyle: 1">
     <div class="lr-toolbar">
-        <div class="btn-group" add-form-btn>
+        <div class="btn-group">
+            <button class="btn lr-main-btn" type="button" ng-click="onSave()"
+                    ng-verify="{control:'appForm',disabled:false,tipStyle:1}" ng-show="!isGrid&&isEdit">
+                <i class="fa fa-save"></i>
+                <span>保存</span>
+            </button>
+            <button class="btn lr-main-btn" ng-click="onCancel()" ng-show="!isGrid&&isEdit">
+                <i class="fa fa-undo"></i>
+                <span>取消</span>
+            </button>
+            <button class="btn lr-main-btn" ng-click="onEdit()" ng-show="!isEdit">
+                <i class="fa fa-edit"></i>
+                <span>修改</span>
+            </button>
+            <button class="btn lr-main-btn" ng-click="onBack()" ng-show="!isBack">
+                <i class="fa fa-chevron-left"></i>
+                <span>返回</span>
+            </button>
         </div>
     </div>
     <div>
-        <accordion class="" close-others="oneAtATime">
+            <accordion class="" close-others="oneAtATime">
             <accordion-group is-open="true" class="lr-page-bg-gray">
                 <accordion-heading class="lr-page-bg-white">
                     <div class="btn lr-page-bg-indigo">
@@ -14,41 +31,41 @@
                     <i class="fa pull-right fa-chevron-circle-down lr-arrow-color"
                        ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                 </accordion-heading>
-                <div class="form-group">
-                    <div class="col-md-4">
-                        <label class="col-md-5 control-label">部门编码：</label>
-                        <div class="col-md-7">
-                            <input class="form-control" ng-disabled="isDisabled" type="text" ng-model="VO.deptcode">
+                        <div class="form-group">
+                                <div class="col-md-4">
+                                    <label class="col-md-5 control-label">部门编码：</label>
+                                <div class="col-md-7">
+                                    <input class="form-control" ng-disabled="isDisabled" type="text" ng-model="VO.deptcode">
+                                </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <label class="col-md-5 control-label">部门名称：</label>
+                                <div class="col-md-7">
+                                    <input class="form-control" ng-disabled="isDisabled" type="text" ng-model="VO.deptname">
+                                </div>
+                                </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label class="col-md-5 control-label">部门名称：</label>
-                        <div class="col-md-7">
-                            <input class="form-control" ng-disabled="isDisabled" type="text" ng-model="VO.deptname">
-                        </div>
-                    </div>
-                </div>
             </accordion-group>
         </accordion>
     </div>
     <accordion class="" close-others="oneAtATime">
-        <accordion-group is-open="false" class="lr-page-bg-gray">
-            <accordion-heading class="lr-page-bg-white">
-                <div class="btn lr-page-bg-indigo">
-                    <i class="fa fa-hand-o-up lr-page-color" aria-hidden="true"></i>
-                    <span class="lr-page-color" ng-bind="getDisName('操作信息','')"></span>
-                </div>
-                <i class="fa pull-right fa-chevron-circle-down lr-arrow-color"
-                   ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-            </accordion-heading>
-            <div class="form-group">
-                <div class="col-md-4">
-                    <label class="col-md-5 control-label">业务单位：</label>
-                    <div class="col-md-7 div-cao-zuo">
-                        {{VO.pkCorp}}
-                    </div>
-                </div>
+    <accordion-group is-open="false" class="lr-page-bg-gray">
+        <accordion-heading class="lr-page-bg-white">
+            <div class="btn lr-page-bg-indigo">
+                <i class="fa fa-hand-o-up lr-page-color" aria-hidden="true"></i>
+                <span class="lr-page-color" ng-bind="getDisName('操作信息','')"></span>
             </div>
-        </accordion-group>
+            <i class="fa pull-right fa-chevron-circle-down lr-arrow-color"
+               ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+        </accordion-heading>
+                <div class="form-group">
+                        <div class="col-md-4">
+                            <label class="col-md-5 control-label">业务单位：</label>
+                            <div class="col-md-7 div-cao-zuo">
+                                {{VO.pkCorp}}
+                            </div>
+                        </div>
+                </div>
+    </accordion-group>
     </accordion>
 </form>
